# bbs

./: .gitignore  README.md
.github/workflows/: discord-webhook-ci.yml  fetch-post-discord-bot-ci.yml  mcp-server-ci.yml  search-backend-ci.yml  search-crawler.yml  search-post-dicord-bot-ci.yml  search-post-discord-bot-ci.yml
discord-bot/: Cargo.toml
discord-webhook/: Cargo.toml  Dockerfile
discord-webhook/.sqlx/: query-affa808f50aca981f80c236bde28a0d9efc3f0c46ec7ff0a3a98d05118b2918b.json
discord-webhook/infra/: .gitignore  main.tf
discord-webhook/src/: main.rs
docs/: API.md
fetch-post-discord-bot/: Dockerfile
fetch-post-discord-bot/src/: main.rs
mcp-server/: Dockerfile  README.md  package-lock.json  package.json
mcp-server/src/: client.ts  index.ts  server.ts
rag/: CLAUDE.md  docker-compose.yml
rag/backend/: Dockerfile  Makefile  pyproject.toml
rag/docs/: DESIGN.md
rag/frontend/: package.json
search-crawler/: Cargo.toml
search-crawler/migrations/: 20250717203317_add_id_index.sql
search-crawler/src/: main.rs
search-post-discord-bot/: .env.sample  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
search-post-discord-bot/src/: lib.rs  main.rs
search/backend/: Cargo.toml  Dockerfile
search/crawler/: .env.example  Cargo.toml  Dockerfile
search/crawler/.sqlx/: query-f71eb57e7f593e04c9ca1a66030eb2ec7b019021eab46f7f058c10136ae5582b.json
search/crawler/src/: board.rs  lib.rs  main.rs  res.rs  sql_client.rs
search/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
search/grafana/: .env.example  README.md  docker-compose.yml  kustomization.yaml
search/infra/: .gitignore  Makefile  README.md  iam.tf  outputs.tf  s3-private.tf.example  (+3 more)
(+60 files in other folders)
