[package]
name = "search-post-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.4"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json"] }
